force-app/main/default/objects/Case/fields/vlocity_ps__FollowUpTo__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FollowUpTo__c</fullName>
    <description>If this activity is a follow up to a previous activity.</description>
    <label>Follow Up To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>