force-app/main/default/objects/Case/fields/vlocity_ps__InventoryItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InventoryItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>vlocity_ps__InventoryItem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>