force-app/main/default/objects/Case/fields/vlocity_ps__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>vlocity_ps__Premises__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>