force-app/main/default/objects/Case/fields/vlocity_ps__PriorityImageName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PriorityImageName__c</fullName>
    <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
    <formula>TEXT(Priority)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Image Name</label>
    <type>Text</type>
</CustomField>