force-app/main/default/objects/Case/fields/vlocity_ps__PSCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PSCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>