force-app/main/default/objects/Case/listViews/vlocity_ps__MyCases.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__MyCases</fullName>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
</ListView>