force-app/main/default/objects/Case/listViews/vlocity_ps__MyOpenCases.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__MyOpenCases</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Cases</label>
</ListView>